# ecommerce-modern-stack

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dbt-docs.yml
airflow/dags/: full_pipeline.py  ingest_raw_data.py  run_dbt_transformations.py
airflow/plugins/operators/: olist_operator.py
airflow/tests/: test_dag_dbt.py  test_dag_ingest.py
dbt/olist_dw/: dbt_project.yml  profiles.yml
dbt/olist_dw/macros/: cents_to_reais.sql
dbt/olist_dw/models/mart/: _mart__models.yml  mart_customers.sql  mart_monthly_sales.sql  mart_orders.sql  mart_products.sql
dbt/olist_dw/models/staging/: _staging__models.yml  _staging__sources.yml  stg_customers.sql  stg_order_items.sql  stg_order_payments.sql  stg_orders.sql  stg_products.sql  stg_sellers.sql
dbt/olist_dw/seeds/: order_status_labels.csv
dbt/olist_dw/tests/: assert_delivery_days_range.sql  assert_positive_order_value.sql
scripts/: load_raw_to_postgres.py
